[FIX] web_studio: styling studio navbar items
Go in studio.
Before this commit the menu items "Edit Menu" and "New Model" were
misaligned.
After this commit, they integrate naturally in the navbar's items flow.

--- a/web_studio/static/src/client_action/navbar/navbar.scss
+++ b/web_studio/static/src/client_action/navbar/navbar.scss
@@ -10,7 +10,6 @@
   .o_web_edit_menu,
   .o_web_create_new_model {
     color: $o-web-studio-text-inactive;
-    display: inline;
     margin-left: 15px;
     padding: 2px 10px 2px 10px;
     font-size: 12px;
